Fix swagger usage
